# VisionCraft

./: .commitlintrc.json  .dockerignore  .env.example  .env.prod.example  .env.qa.example  .gitignore  .prettierrc  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.qa.yml  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-prod.yml  deploy-qa.yml  promote-to-prod.yml
ai-service/: .env.example  kaggle_server.py  main.py  pyproject.toml
ai-service/config/: settings.py
ai-service/middleware/: safety.py
ai-service/providers/: __init__.py  gemini_provider.py  huggingface_provider.py  local_provider.py  openai_provider.py  stability.py
ai-service/registry/: models.py
ai-service/routers/: generation.py
ai-service/schemas/: generation.py
ai-service/services/: generation.py
apps/admin/: index.html  package.json  vercel.json
apps/web/: .env.example  .env.local.example  .env.prod.example  .env.qa.example  index.html  package.json  tailwind.config.cjs  tailwind.config.ts  tsconfig.json  vercel.json  vite.config.ts
docs/: AI_Platform_HLD_v3_FINAL.docx  FRONTEND PLAN.md  HLD_v3_FINAL_summary.md  IMPLEMENTATION_PLAN.md  INFRASTRUCTURE.md  QA_DEPLOYMENT.md  VERCEL_DEPLOYMENT.md
docs/adr/: ADR-0001.md  ADR-0002.md  ADR-0003.md  ADR-0004.md  ADR-0005.md  ADR-0006.md  ADR-0007.md  ADR-0008.md  (+1 more)
e2e/: auth.test.ts  package.json  placeholder.test.ts  playwright.config.ts  tsconfig.json
(+165 files in other folders)
